Allow for custom page sizes on image prints

--- a/sample.html
+++ b/sample.html
@@ -589,6 +589,11 @@
                                                     </label>
                                                     <input type="number" step="any" id="pxlSizeHeight" class="form-control pull-right" />
                                                 </div>
+
+                                                <div class="form-group form-inline">
+                                                    <label for="pxlSizeForce">&nbsp; As Custom Size</label>
+                                                    <input type="checkbox" id="pxlSizeForce" class="pull-right" />
+                                                </div>
                                             </div>
 
                                             <div class="form-group">
@@ -2150,7 +2155,7 @@
         //print options not used with this flavor
 
         var printData = [
-            { type: 'pixel', format: 'image', flavor: 'file', data: 'assets/img/image_sample.png' }
+            { type: 'pixel', format: 'image', flavor: 'file', data: 'assets/test/custom_sized_tester.png' }
             //also valid, as format and flavor will default to proper values:
 //             { type: 'pixel', data: 'assets/img/image_sample.png' }
         ];
@@ -2698,6 +2703,7 @@
 
         $("#pxlSizeWidth").val('');
         $("#pxlSizeHeight").val('');
+        $("#pxlSizeForce").prop('checked', false);
         $("#pxlSizeActive").prop('checked', false);
         $("#pxlSizeGroup").css('display', 'none');
 
@@ -3252,7 +3258,8 @@
         if (isChecked($("#pxlSizeActive"), cleanConditions['pxlSizeActive']) && (($("#pxlSizeWidth").val() !== '') || ($("#pxlSizeHeight").val() !== ''))) {
             pxlSize = {
                 width: $("#pxlSizeWidth").val(),
-                height: $("#pxlSizeHeight").val()
+                height: $("#pxlSizeHeight").val(),
+                custom: $("#pxlSizeForce").prop('checked')
             };
         }
 
@@ -3446,7 +3453,7 @@
             // Ensure we're on the right tab
             stayOnTab = true;
         }
-        
+
         var setupDropButton = function(format, name, data, stayOnTab) {
             var tabHref;
             var buttonId;
@@ -3461,7 +3468,7 @@
                     buttonId = "#rawDropBtn"
                     tabHref = "#rawContent";
             }
-            
+
             var button = $(buttonId);
             if(stayOnTab) {
                 // File upload button can't change tabs
@@ -3489,7 +3496,7 @@
 
         if (file) {
             console.log("Dropped file:", file);
-            getBase64(file).then(function(base64) { 
+            getBase64(file).then(function(base64) {
                 var name = file.name;
                 var extension = name.substring(name.lastIndexOf('.') + 1, name.length) || '';
                 switch(extension.toLowerCase()) {
@@ -3511,7 +3518,7 @@
                     default:
                         setupDropButton("command", name, base64, stayOnTab);
                 }
-            }).catch(displayError); 
+            }).catch(displayError);
         }
     }
 
